log/build_2021-10-03_09-38-41/raspimouse_ros2/stderr.log
  File "/home/ubuntu/ros2_ws/install/raspimouse_ros2/lib/python3.8/site-packages/raspimouse/buzzer4_sub_node.py", line 60
    else goal_handle.request.durations[i]):
         ^
SyntaxError: invalid syntax

